# doc_4_cursor

./: README.md  environment.yml
doc_scraper/: LICENSE  README.md  __init__.py  cli.py  scraper.py  setup.py
doc_scraper/config/: sites_config.yaml
doc_scraper/doc_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
doc_scraper/tests/: test_scraper.py
doc_scraper_fc/: .env_example  .gitignore  README.md  __init__.py  cli.py  pyproject.toml  requirements.txt  run_scraper.py  scraper.py
doc_scraper_fc/config/: __init__.py  default_config.yaml
doc_scraper_fc/tests/: test_scraper.py
